--- a/index.html
+++ b/index.html
@@ -2,9 +2,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>image</title>
 </head>
 <body>
-    <img src="image/steve_piraud_profile_picture.png" alt="steve piraud profile picture">
+    <img src="image/steve_piraud_profile_picture_copie.png" alt="steve piraud profile picture">
 </body>
 </html>
