portfolio image added

--- a/index.html
+++ b/index.html
@@ -6,5 +6,6 @@
 </head>
 <body>
     <img src="image/steve_piraud_profile_picture_copie.png" alt="steve piraud profile picture">
+    <img src="image/Portfolio.png" alt="">
 </body>
 </html>
